trying to get images to show

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -543,15 +543,15 @@ textarea.form-control {
 }
 
 #callout-one {
-	background-image: url(../images/home-2.jpg);
+	background-image: url(../assets/images/home-2.jpg);
 }
 
 #callout-two {
-	background-image: url(../images/home-3.jpg);
+	background-image: url(../assets/images/home-3.jpg);
 }
 
 #callout-three {
-	background-image: url(../images/home-4.jpg);
+	background-image: url(../assets/images/home-4.jpg);
 }
 
 /* ---------------------------------------------- /*
@@ -560,7 +560,7 @@ textarea.form-control {
 
 .module-image {
 	background-color: #222;
-	background-image: url(../images/home-1.jpg);
+	background-image: url(../assets/images/home-1.jpg);
 	background-repeat: no-repeat;
 	position: relative;
 	z-index: 1;
