Inserted ingredients photo

--- a/scss/styles/_ingredients.scss
+++ b/scss/styles/_ingredients.scss
@@ -1,6 +1,6 @@
 // Ingredients Block
 .ingredients-block {
-  background: url(../img/ingredients-bg.jpg) 0 0 no-repeat;
+  background: url(../img/ingredients.png) 0 0 no-repeat;
   background-size: cover;
 }
 .feature-image-group {
